src/mongo/util/log.h
@@ -129,6 +129,18 @@ namespace logger {
     string errnoWithDescription(int errorcode = -1);
     void rawOut( const StringData &s );
 
+    /*
+     * Redirects the output of "rawOut" to "outDestination".  The default is stdout.
+     *
+     * NOTE: This needs to be here because the tools such as mongoexport and mongodump sometimes
+     * send data to stdout and share this code, so they need to be able to redirect output to
+     * stderr.  Eventually rawOut should be replaced with something better and our tools should not
+     * need to call internal server shutdown functions.
+     *
+     * NOTE: This function is not thread safe and should not be called from a multithreaded context.
+     */
+    void setRawOutDestination(FILE *outDestination);
+
     /**
      * Write the current context (backtrace), along with the optional "msg".
      */
